--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "autoprefixer": "^10.4.19",
+        "flowbite": "^2.4.1",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.6"
     }
