--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "autoprefixer": "^10.4.19",
         "flowbite": "^2.4.1",
         "postcss": "^8.4.39",
+        "quill": "^2.0.2",
         "tailwindcss": "^3.4.6"
     }
 }
