--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "flowbite": "^2.4.1",
         "postcss": "^8.4.39",
         "quill": "^2.0.2",
+        "swiper": "^11.1.8",
         "tailwindcss": "^3.4.6"
     }
 }
